# pydata-2023-12-01

./: README.md  pyproject.toml
0 intro/: README.md
1 custom_transformers/: README.md  custom_transformers.ipynb  real.py
2 reimplementing_pandas/: README.md  reimplement.ipynb
3 pandera/: README.md  pandera.ipynb  schemas.py
4 wrapperswrappers/: ligthgbm.ipynb  randomizer.py
5 docker/: README.md  dockerfile
6 outro/: README.md
9 extra/: extra.md
