[tool.poetry]
name = "Lessons learned"
version = "0.1.0"
description = ""
authors = ["Aidis Stukas <aidiss@GMAIL.COM>"]

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.8.1"
lightgbm = "^4.1.0"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
pandera = "^0.17.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
